[tool.poetry]
name = "python-injection"
version = "0.0.0"
description = "Fast and easy dependency injection framework."
authors = ["remimd"]
keywords = ["dependencies", "inject", "injection"]
license = "MIT"
packages = [{ include = "injection" }]
readme = "documentation/basic-usage.md"
repository = "https://github.com/100nm/python-injection"

[tool.poetry.dependencies]
python = ">=3.10, <4"

[tool.poetry.group.dev.dependencies]
argon2-cffi = "*"
blacksheep = "*"
faker = "*"
mypy = "*"
pydantic = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"

[tool.coverage.report]
exclude_lines = [
    "pass",
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
exclude = [
    "documentation/example/",
    "tests/",
]
implicit_optional = true

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-p no:warnings --tb=short"
asyncio_mode = "auto"
testpaths = "**/tests/"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["F", "I", "N"]
ignore = ["N818"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
